Optimized user entity